// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Process image nodes correctly correctly creates an ImageGifFit node from a file image node 1`] = `
Array [
  Array [
    Object {
      "children": Array [],
      "id": "uuid-from-gatsby",
      "internal": Object {
        "contentDigest": undefined,
        "type": "ImageGifFit",
      },
      "parent": "whatever",
    },
  ],
]
`;

exports[`Process image nodes correctly correctly creates an ImageGifFit node from a file image node 2`] = `
Array [
  Array [
    Object {
      "child": Object {
        "children": Array [],
        "id": "uuid-from-gatsby",
        "internal": Object {
          "contentDigest": undefined,
          "type": "ImageGifFit",
        },
        "parent": "whatever",
      },
      "parent": Object {
        "children": Array [],
        "extension": "gif",
        "id": "whatever",
        "internal": Object {
          "contentDigest": "whatever",
        },
      },
    },
  ],
]
`;
